2001-08-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (QMAILVIRTUALDOMAINS): New variable to toggle qmail
	virtualdomains support.

	(VIRTUALDOMAINS): New variable pointing to qmail's virtualdomains
	control file.

	* Cookie.py (make_confirm_address): New function to create full
        confirmation-style addresses (both 'accept' and 'done).

	* Defaults.py (TMDA_VERSION): Begin 0.33 development.

2001-08-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (SACRED_FILE): New variable pointing to a filename
	which contains a list of sacred keywords, the prescence of which
	automatically zaps the mail into your mailbox.
	Patch contributed by Binesh Bannerjee.

2001-08-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (format_timeout): Added `Y' for years, and `M' for
	months.

	(seconds): Ditto.

2001-08-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.32 development.

2001-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.31 development.

	(LOCALS): Variable no longer necessary.

	(USERPREFIX): Ditto.

2001-07-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (maketext): Add error checking for template variables.

	* Defaults.py: Remove BOUNCE_DATED_CC, BOUNCE_SENDER_CC, and add
	BOUNCE_CONFIRM_CC.

	(DATED_TEMPLATE_VARS,SENDER_TEMPLATE_VARS): New variables to allow
	'dated' and 'sender' address variables to be included in the
	templates.

2001-07-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Remove CONFIRMATION_MODE, BOUNCE_DATED_TEMPLATE,
	BOUNCE_SENDER_TEMPLATE, and add CONFIRM_REQUEST_TEMPLATE.  

2001-07-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Change default location of former dot-tmda files to
	lie within DATADIR/lists/. (e.g, ~/.tmda-bare --> ~/.tmda/lists/bare)
