@@ -58,11 +58,11 @@ import os                                      # don't remove
 # YYYYmm = time.strftime('%Y-%m',localtime) 
 # LOGFILE = os.path.expanduser("~/tmda/log/tmdalog." + YYYYmm)
 
-# QMAILVIRTUALDOMAINS = 1
-
 # TIMEOUT = "5d"
 
 # USERNAME = "jdoe" 
+
+# USEVIRTUALDOMAINS = 1
 
 # VIRTUALDOMAINS = "/var/qmail/control/virtualdomains"
 
