@@ -1,3 +1,7 @@
+2001-08-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (USEVIRTUALDOMAINS): Replaces QMAILVIRTUALDOMAINS.
+	
 2001-08-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (QMAILVIRTUALDOMAINS): New variable to toggle qmail
